# spring-2019-paradigms-tasks

./: .gitignore  .travis.yml
task06/: README.md
task08/: README.md
task08/sudoku/: Cargo.toml  field.rs  main.rs
task08/tests/: 03-medium.in
task09/: .gitignore  CMakeLists.txt  README.md
task09/src/: queue.cpp  queue.h  queue_test.cpp  tsqueue.cpp  tsqueue.h  tsqueue_test.cpp
task10/: CHANGELOG.md  README.md  task10.cabal
task10/src/: Basics.hs  Part1.hs  Part2.hs  Robots.hs  Task10.hs
task10/test/: TestBasics.hs  TestRobots.hs  TestStub.hs  test.hs
task11/: README.md  task11.cabal
task11/src/: Map.hs  MapInstance.hs  NaiveList.hs  NaiveTree.hs
task11/test/: TestMap.hs
task12/: 01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql  README.md
taskXX/: a.py  b.py
