cabal-version:       >=1.10

name:                task10
version:             0.1.0.0
synopsis:            This is hometask 10 for Programming Languages and Paradigms course @ SPbSU, Spring 2019
author:              edgarzhavoronkov
maintainer:          edzhavoronkov@gmail.com
build-type:          Simple

library
    exposed-modules:     Part1, Part2
    build-depends:       base >=4.11
    ghc-options:         -Wall -Werror -Wextra
    hs-source-dirs:      src
    default-language:    Haskell2010

test-suite test
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             test.hs
    build-depends:
        base >=4.11
        , tasty >= 0.8
        , tasty-hunit >= 0.10
        , task10
