cabal-version:       >=1.10

name:                task10
version:             0.1.0.0
synopsis:            This is hometask 10 for Programming Languages and Paradigms course @ SPbSU, Spring 2019
author:              edgarzhavoronkov
maintainer:          edzhavoronkov@gmail.com
build-type:          Simple

library
    exposed-modules:     Basics, Robots
    build-depends:       base >=4.11
    ghc-options:         -Wall -Werror -Wextra -fno-warn-incomplete-patterns
    hs-source-dirs:      src
    default-language:    Haskell2010

test-suite basics
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             TestBasics.hs
    build-depends:
        base >=4.11
        , tasty >= 0.8
        , tasty-hunit >= 0.10
        , hspec >=2 && <2.8
        , tasty-hspec >= 1.1.5
        , task10

test-suite robots
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             TestRobots.hs
    build-depends:
        base >=4.11
        , tasty >= 0.8
        , tasty-hunit >= 0.10
        , hspec >=2 && <2.8
        , tasty-hspec >= 1.1.5
        , task10
